namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-hlt-portal-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-hlt-portal-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "hlt-portal"
    cloud-platform.justice.gov.uk/application: "Hlt Performance & Assurance Portal"
    cloud-platform.justice.gov.uk/owner: "hmpps performance; prison, probation & reoffending division; data & analysis: performance_assurance_portal@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hlt-portal"
    cloud-platform.justice.gov.uk/team-name: "hlt-portal-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
